@@ -1,3 +1,7 @@
+--thanks from jaz
+Thanks to sdt for handing the library down to me.
+
+--thanks from sdt
 Many thanks to Mike Day <mikeday@corplink.com.au> for his never-ending support
 on practically all of my (never-ending) questions.
 
